--- a/Banking System/bin/.gitignore
+++ b/Banking System/bin/.gitignore
@@ -14,3 +14,11 @@
 /Transaction.class
 /transactionScreen.class
 /transactionScreen$1.class
+/Settings.class
+/MainMenu$4.class
+/MainMenu$5.class
+/manageContacts.class
+/Settings$1.class
+/Settings$2.class
+/Settings$3.class
+/Settings$4.class
