--- a/Banking System/bin/.gitignore
+++ b/Banking System/bin/.gitignore
@@ -26,3 +26,6 @@
 /Recurring.class
 /Etransfer$1.class
 /Etransfer$2.class
+/manageContacts$1.class
+/manageContacts$2.class
+/manageContacts$3.class
